# RongCloud

./: settings.gradle
RongCloundSDK/callkit/: build.gradle
RongCloundSDK/calllib/: build.gradle
RongCloundSDK/imkit/: build.gradle
RongCloundSDK/imlib/: AndroidManifest.xml  build.gradle
RongCloundSDK/imlib/libs/: rong_chatroom_5.2.1.51.aar  rong_customservice_5.2.1.51.aar  rong_discussion_5.2.1.51.aar  rong_location_5.2.1.51.aar  rong_publicservice_5.2.1.51.aar
RongCloundSDK/rtclib/: AndroidManifest.xml  build.gradle
app/: build.gradle
app/src/androidTest/java/com/hl/rongclound/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera_manager.h  load_assets.cc  load_assets.h  native-lib.cc
app/src/main/cpp/opencv2/: cvconfig.h
app/src/main/cpp/toolkit/: config.h  defs.h  headers.h  models.h  toolkit.h  types.h  utils.h
app/src/main/cpp/toolkit/onnx/core/: config.h  defs.h  handler.h  model_data.h  onnx_core.h  onnx_utils.h  types.h
app/src/main/cpp/toolkit/onnx/cv/: face_ai.h  glint_arcface.h  mobile_facenet.h  rvm.h  scrfd.h
app/src/main/cpp/toolkit/sdk/: debug.h  helper.h  matting.h  wrapper.h
app/src/main/java/com/hl/rongclound/: BaseActivity.kt  BaseApplication.kt  LauchActivity.kt  LawyerMeetingManager.kt  MainActivity.kt
app/src/main/res/layout/: activity_lauch.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hl/rongclound/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
